--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,17 +1,20 @@
-name: Run MATLAB Script
-on: [push]
+name: run matlab script
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches: [main]
+    types: [opened, synchronize]
+    
 jobs:
-  my-job:
-    name: Run MATLAB Script
+  run-script:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-      - name: Set up MATLAB
-        uses: matlab-actions/setup-matlab@v2
+      - uses: actions/checkout@v4
+      - uses: matlab-actions/setup-matlab@v2
         with:
-          release: R2024a
-      - name: Run script
-        uses: matlab-actions/run-command@v2
+          release: R2022a
+      - uses: matlab-actions/run-command@v2
         with:
           command: script
